# agent-tools

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  semantic-release.yml
integrations/codex-hooks/: hooks.json  stop_tts.sh
prompt_examples/: rewrite_for_tts.md
scripts/: benchmark_tts_cpu.py  set_version.py
src/agent_tools/: agent_integration.py  audio.py  claude_code_transform.py  claude_config.py  claude_integration.py  cli.py  codex_auth.py  codex_config.py  codex_integration.py  codex_notify.py  codex_private_api.py  controller_client.py  cuda_install.py  cuda_runtime.py  hook_install.py  perf_log.py  playback.py  playback_queue.py  queue_db.py  runtime.py  transformer.py  tts.py  ttsify.py  ui_app.py
src/agent_tools/claude_hooks/: __init__.py  stop_tts.sh
src/agent_tools/codex_hooks/: __init__.py  stop_tts.sh
src/agent_tools/prompts/: __init__.py  ttsify.md
tests/: test_agent_integration.py  test_audio.py  test_claude_code_transform.py  test_claude_integration.py  test_cli.py  test_codex_auth.py  test_codex_config.py  test_codex_integration.py  test_codex_notify.py  test_codex_private_api.py  test_cuda_runtime.py  test_hook_install.py  test_perf_log.py  test_playback.py  test_queue_db.py  test_runtime.py  test_ttsify.py  test_ui_app.py
