[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ai-nd-co-agent-tools"
version = "0.1.3"
description = "Codex-backed text transformation and Kokoro TTS command-line tools."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "ai-nd-co" }]
keywords = ["codex", "tts", "kokoro", "cli", "speech"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "httpx>=0.28.1",
  "kokoro>=0.9.4",
  "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/ai-nd-co/agent-tools"
Repository = "https://github.com/ai-nd-co/agent-tools"
Issues = "https://github.com/ai-nd-co/agent-tools/issues"

[project.optional-dependencies]
dev = [
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "ruff>=0.6.9",
]
ui = [
  "PySide6>=6.8.0",
]

[project.scripts]
agent-tools = "agent_tools.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tools"]
include = ["src/agent_tools/prompts/*.md"]

[tool.hatch.build.targets.sdist]
include = [
  "src/agent_tools/**",
  "tests/**",
  "scripts/**",
  "prompt_examples/**",
  "README.md",
  "CHANGELOG.md",
  "RELEASING.md",
  "LICENSE",
  "pyproject.toml",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
strict_equality = true
pretty = true
packages = ["agent_tools"]

[[tool.mypy.overrides]]
module = ["kokoro"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["PySide6", "PySide6.*"]
ignore_missing_imports = true
